<resources>
    <string name="app_name">Tip Time</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="good_18">good (18%)</string>
    <string name="okay_15">okay (15%)</string>
    <string name="how_was_your_service">How was your service</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip Amount</string>
</resources>